[tool.poetry]
name = "HW_11_WEB"
version = "0.1.0"
description = ""
authors = ["SaitovMykyta <rassskoll@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"